Новая версия модели, измененна тренировка(ресампл датасета, меньше классов)

--- a/ml/acousticModelTest.ipynb
+++ b/ml/acousticModelTest.ipynb
@@ -186,11 +186,10 @@
    "source": [
     "scaler = joblib.load(\"scaler\")\n",
     "encoder = LabelEncoder()\n",
-    "marine_mammals = \"AtlanticSpottedDolphin BeardedSeal Beluga_WhiteWhale BlueWhale BottlenoseDolphin Boutu_AmazonRiverDolphin BowheadWhale ClymeneDolphin \\\n",
-    "        Commerson'sDolphin CommonDolphin Dall'sPorpoise DuskyDolphin FalseKillerWhale Fin_FinbackWhale FinlessPorpoise Fraser'sDolphin Grampus_Risso'sDolphin \\\n",
-    "        GraySeal GrayWhale HarborPorpoise HarbourSeal HarpSeal Heaviside'sDolphin HoodedSeal HumpbackWhale IrawaddyDolphin JuanFernandezFurSeal KillerWhale \\\n",
-    "        LeopardSeal Long_FinnedPilotWhale LongBeaked(Pacific)CommonDolphin MelonHeadedWhale MinkeWhale Narwhal NewZealandFurSeal NorthernRightWhale \\\n",
-    "        PantropicalSpottedDolphin RibbonSeal RingedSeal RossSeal Rough_ToothedDolphin SeaOtter Short_Finned(Pacific)PilotWhale SouthernRightWhale SpermWhale\".split()\n",
+    "marine_mammals = \"AtlanticSpottedDolphin BeardedSeal Beluga_WhiteWhale BottlenoseDolphin BowheadWhale ClymeneDolphin \\\n",
+    "        CommonDolphin FalseKillerWhale Fin_FinbackWhale Fraser'sDolphin \\\n",
+    "        HumpbackWhale KillerWhale MelonHeadedWhale NorthernRightWhale \\\n",
+    "        PantropicalSpottedDolphin Short_Finned(Pacific)PilotWhale SpermWhale\".split()\n",
     "y = encoder.fit_transform(marine_mammals)\n",
     "def classify_audio(audio_path, window_size=2.5, hop_size=1, sample_rate=40000, confidence_threshold=0.3):\n",
     "    # Загрузка аудио\n",
@@ -8423,7 +8422,7 @@
     }
    ],
    "source": [
-    "file_path = \"04081350.wav\"\n",
+    "file_path = \"240826-013_K24.wav\" #Ссылочку на аудио сюда\n",
     "with open(\"prediction_results.txt\", \"w\") as file:\n",
     "    print(\"\", file=file)\n",
     "segments = classify_audio(file_path)\n",
@@ -8453,7 +8452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
