--- a/ml/utils/modelMetricsTest.ipynb
+++ b/ml/utils/modelMetricsTest.ipynb
@@ -28,21 +28,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision: 0.6667\n",
+      "Precision: 0.9091\n",
       "Recall: 1.0000\n",
-      "F1-score: 0.8000\n"
+      "F1-score: 0.9524\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
+    "from tqdm import tqdm\n",
     "\n",
     "def calculate_iou(interval_a, interval_b):\n",
     "    start_a, end_a = interval_a\n",
@@ -87,12 +88,105 @@
     "    }\n",
     "\n",
     "# Пример использования\n",
-    "true_intervals = [(0, 2), (4, 5)]\n",
-    "predicted_intervals = [(0, 2.1), (3.9, 5.2), (6, 7)]  # Последний интервал - ложное срабатывание\n",
+    "true_intervals = [\n",
+    "    (0, 5.2), (7.1, 12.3), (15.0, 18.9), \n",
+    "    (22.4, 27.8), (30.1, 35.5), (38.0, 43.2),\n",
+    "    (47.5, 52.0), (55.8, 60.3), (63.7, 68.9),\n",
+    "    (72.0, 77.4)\n",
+    "]\n",
+    "predicted_intervals = [\n",
+    "    (0.1, 5.3), (6.9, 12.1), (14.8, 18.7), \n",
+    "    (22.0, 27.0), (29.9, 34.0), (37.5, 42.0), \n",
+    "    (47.0, 51.5), (55.0, 59.8), (63.0, 67.5),\n",
+    "    (71.5, 76.0), (80.0, 85.2) \n",
+    "]\n",
     "\n",
     "metrics = evaluate_metrics(true_intervals, predicted_intervals)\n",
     "for metric, value in metrics.items():\n",
     "    print(f\"{metric}: {value:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapping: 100%|██████████| 1000/1000 [00:00<00:00, 8000.53it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Доверительные интервалы (95%):\n",
+      "Precision: [0.18181818 0.72727273]\n",
+      "Recall: [0.2 0.8]\n",
+      "F1-score: [0.19047619 0.76190476]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bootstrap_confidence_intervals(true_segments, pred_segments, iou_threshold=0.5, \n",
+    "                                 n_bootstrap=1000, confidence_level=0.95):\n",
+    "    \"\"\"Вычисляет доверительные интервалы метрик с помощью бутстрепа.\n",
+    "        true_segments: Эталонные интервалы\n",
+    "        pred_segments: Предсказанные интервалы\n",
+    "        iou_threshold: Порог IoU\n",
+    "        n_bootstrap: Количество бутстреп-выборок (ставьте поменьше для большой выборки)\n",
+    "        confidence_level: Уровень доверия (0.95 для 95%)\n",
+    "    \"\"\"\n",
+    "    # Исходные метрики\n",
+    "\n",
+    "    # Бутстреп-выборки\n",
+    "    n_true = len(true_segments)\n",
+    "    n_pred = len(pred_segments)\n",
+    "    \n",
+    "    precision_samples = []\n",
+    "    recall_samples = []\n",
+    "    f1_samples = []\n",
+    "    \n",
+    "    for _ in tqdm(range(n_bootstrap), desc=\"Bootstrapping\"):\n",
+    "        # Генерация бутстреп-выборок с повторением\n",
+    "        true_bootstrap = [true_segments[i] for i in np.random.choice(n_true, n_true, replace=True)]\n",
+    "        pred_bootstrap = [pred_segments[i] for i in np.random.choice(n_pred, n_pred, replace=True)]\n",
+    "        \n",
+    "        # Вычисление метрик для выборки\n",
+    "        metrics = evaluate_metrics(true_bootstrap, pred_bootstrap, iou_threshold)\n",
+    "        precision_samples.append(metrics['Precision'])\n",
+    "        recall_samples.append(metrics['Recall'])\n",
+    "        f1_samples.append(metrics['F1-score'])\n",
+    "    \n",
+    "    # Вычисление квантилей\n",
+    "    alpha = (1 - confidence_level) / 2\n",
+    "    ci_low = alpha * 100\n",
+    "    ci_high = (1 - alpha) * 100\n",
+    "    \n",
+    "    def get_ci(samples):\n",
+    "        return np.percentile(samples, [ci_low, ci_high])\n",
+    "    \n",
+    "    return {\n",
+    "        'Precision_CI': get_ci(precision_samples),\n",
+    "        'Recall_CI': get_ci(recall_samples),\n",
+    "        'F1_CI': get_ci(f1_samples),\n",
+    "    }\n",
+    "\n",
+    "bootstrap = bootstrap_confidence_intervals(true_intervals, predicted_intervals)\n",
+    "print(\"\\nДоверительные интервалы (95%):\")\n",
+    "print(f\"Precision: {bootstrap['Precision_CI']}\")\n",
+    "print(f\"Recall: {bootstrap['Recall_CI']}\")\n",
+    "print(f\"F1-score: {bootstrap['F1_CI']}\")"
    ]
   }
  ],
